--- a/server/.env
+++ b/server/.env
@@ -7,4 +7,4 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=devcommgio2006@gmail.com
 SMTP_PASS=hfksiwmxnhttvoii
-SMTP_FROM="CCIS Tickets" <devcommgio2006@gmail.com>
+SMTP_FROM="CCIS Ticketing System" <devcommgio2006@gmail.com>
